--- a/popup/calculator.html
+++ b/popup/calculator.html
@@ -13,7 +13,7 @@
         <button id="seven"  class="button num">7</button>
         <button id="eight"  class="button num">8</button>
         <button id="nine"   class="button num">9</button>
-        <button id="clear"  class="button math">X</button>
+        <button id="clear"  class="button math">CE</button>
     </div>
     <div>
         <button id="four"  class="button num">4</button>
