--- a/popup/calculator.html
+++ b/popup/calculator.html
@@ -10,7 +10,7 @@
 <body>
 <div>
     <div  id="text" class="text">0</div>
-    <div style="">
+    <div>
         <button id="seven"  class="button num">7</button>
         <button id="eight"  class="button num">8</button>
         <button id="nine"   class="button num">9</button>
@@ -22,7 +22,7 @@
         <button id="six"   class="button num">6</button>
         <button id="add" class="button math">+</button>
     </div>
-    <div id="assa">
+    <div>
         <button id="one"  class="button num">1</button>
         <button id="two"  class="button num">2</button>
         <button id="three"  class="button num">3</button>
