--- a/popup/calculator.html
+++ b/popup/calculator.html
@@ -9,12 +9,13 @@
 
 <body>
 <div>
-    <div  id="text" class="text">0</div>
+    <div  id="text" class="text fullscr">0</div>
     <div>
         <button id="seven"  class="button num">7</button>
         <button id="eight"  class="button num">8</button>
         <button id="nine"   class="button num">9</button>
         <button id="clear"  class="button math">C</button>
+        
     </div>
     <div>
         <button id="four"  class="button num">4</button>
