Added a "to second pow" button and fractional number support

--- a/popup/calculator.html
+++ b/popup/calculator.html
@@ -14,6 +14,7 @@
         <button id="seven"  class="button num">7</button>
         <button id="eight"  class="button num">8</button>
         <button id="nine"   class="button num">9</button>
+        <button id="sec_pow"  class="button math">x²</button>
         <button id="clear"  class="button math">C</button>
         
     </div>
@@ -30,9 +31,10 @@
         <button id="minus" class="button math">--</button>
     </div>
     <div>
-        <button id="mnosh" class="button math">*</button>
-        <button id="delenije" class="button math">÷</button>
-        <button id="stepen" class="button num">0</button>
+        <button id="mult" class="button math">*</button>
+        <button id="div" class="button math">÷</button>
+        <button id="zero" class="button num">0</button>
+        <button id="dot" class="button math">.</button>
         <button id="equal" class="button equal">=</button>
 
     </div>
