--- a/popup/calculator.html
+++ b/popup/calculator.html
@@ -14,8 +14,9 @@
         <button id="seven"  class="button num">7</button>
         <button id="eight"  class="button num">8</button>
         <button id="nine"   class="button num">9</button>
-        <button id="sec_pow"  class="button math">x²</button>
         <button id="clear"  class="button math">C</button>
+        <button id="sec_pow"  class="button math">x²</button>
+        
         
     </div>
     <div>
@@ -23,12 +24,14 @@
         <button id="five"  class="button num">5</button>
         <button id="six"   class="button num">6</button>
         <button id="add" class="button math">+</button>
+        <button id="pow"  class="button math">^</button>
     </div>
     <div>
         <button id="one"  class="button num">1</button>
         <button id="two"  class="button num">2</button>
         <button id="three"  class="button num">3</button>
-        <button id="minus" class="button math">--</button>
+        <button id="minus" class="button math">-</button>
+        <button id="sqrt" class="button math">√</button>
     </div>
     <div>
         <button id="mult" class="button math">*</button>
@@ -38,6 +41,15 @@
         <button id="equal" class="button equal">=</button>
 
     </div>
+
+    <div>
+        <button id="sin" class="button spec">sn</button>
+        <button id="cos" class="button spec">cs</button>
+        <button id="tg" class="button spec">tg</button>
+        <button id="ctg" class="button spec">ct</button>
+
+    </div>
+
     <!--div>
         <button class="chmod-btn fullscr">chmod</button>
     </div-->
