New function - more/less buttons

--- a/popup/calculator.html
+++ b/popup/calculator.html
@@ -35,14 +35,14 @@
     </div>
     <div>
         <button id="mult" class="button math">*</button>
-        <button id="div" class="button math">÷</button>
         <button id="zero" class="button num">0</button>
-        <button id="dot" class="button math">.</button>
+        <button id="div" class="button math">÷</button>
         <button id="equal" class="button equal">=</button>
+        <button id="dot" class="button math">.</button>
 
     </div>
 
-    <div>
+    <div id="sincos">
         <button id="sin" class="button spec">sn</button>
         <button id="cos" class="button spec">cs</button>
         <button id="tg" class="button spec">tg</button>
@@ -50,9 +50,9 @@
 
     </div>
 
-    <!--div>
-        <button class="chmod-btn fullscr">chmod</button>
-    </div-->
+    <div>
+        <button id="chmod" class="chmod-btn fullscr">MORE</button>
+    </div>
 
 
 </div>
